# simple-bbs-writer

.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  menu_bar.rs  system_tray.rs
src-tauri/src/bbs/: compatible.rs  mod.rs  shitaraba.rs  test.rs
src-tauri/src/popover/: mod.rs  popover_manager.rs  popover_view.rs  popover_view_controller.rs  popover_view_model.rs
