[package]
name = "simple-bbs-writer"
version = "0.2.0"
description = "A Tauri App"
authors = ["progre"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simple_bbs_writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dispatch2 = "0.3"
encoding_rs = "0.8.35"
futures = "0.3.31"
objc2 = "0.6.3"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.2"
percent-encoding = "2.3.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.47.1", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
